--- a/app/Resources/views/RepEstrategicos/CapturaDatos/rep_res_eficiencia_com_glo.html.twig
+++ b/app/Resources/views/RepEstrategicos/CapturaDatos/rep_res_eficiencia_com_glo.html.twig
@@ -9,6 +9,7 @@
         <div class="x_content">
             <br/>
            {{  form_start(form, {'attr': {'class' : 'form-horizontal'}}) }}
+            {{ form_errors(form, {'attr' : {'class' : 'alert alert-danger'}, {'role' : 'alert'} }) }}
             <div class="form-group col-md-12 col-sm-12 col-xs-12">
                 {{ form_label(form.periodo, 'Período: ', {'label_attr' : {'class' : 'control-label col-md-1 col-sm-1 col-xs-12'}}) }}
                 <div class="col-md-12">
@@ -76,7 +77,7 @@
                     </div>
                 </div>
             {% else %}
-                <h3></h3>
+                <h3>No existen datos para estos parámetros</h3>
             {% endif %}
             {{ form_widget((form._token)) }}
             {{ form_end(form, {'render_rest': false}) }}
